--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ FIND_PACKAGE( ILCUTIL REQUIRED COMPONENTS ILCSOFT_CMAKE_MODULES )
 
 FIND_PACKAGE( Marlin 1.0 REQUIRED ) # minimum required Marlin version
 
-FIND_PACKAGE( ROOT REQUIRED COMPONENTS Hist)
+FIND_PACKAGE( DD4hep REQUIRED COMPONENTS DDCore )
+
+FIND_PACKAGE( ROOT REQUIRED) ## COMPONENTS Hist)
 
 FIND_PACKAGE( RAIDA REQUIRED )
 
@@ -58,11 +60,15 @@ TARGET_INCLUDE_DIRECTORIES(TrackPerf
   ${CMAKE_CURRENT_SOURCE_DIR}
   PRIVATE
   ${Marlin_INCLUDE_DIRS}
-  ${RAIDA_INCLUDE_DIRS})
+  ${RAIDA_INCLUDE_DIRS}
+  ${ROOT_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(TrackPerf
   PRIVATE
   ${RAIDA_LIBRARIES}
-  ROOT::Hist)
+  ROOT::Hist
+  ${ROOT_LIBRARIES} 
+  DD4hep::DDCore
+  )
 TARGET_COMPILE_DEFINITIONS(TrackPerf
   PRIVATE
   ${RAIDA_DEFINITIONS})
