--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ ADD_LIBRARY(TrackPerf SHARED
   ./src/TrackHists.cxx
   ./src/TruthHists.cxx
   ./src/FilterTracks.cxx
+  ./src/ResoHists.cxx
   )
 TARGET_INCLUDE_DIRECTORIES(TrackPerf
   PUBLIC
