--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ FIND_PACKAGE( ROOT REQUIRED) ## COMPONENTS Hist)
 
 FIND_PACKAGE( RAIDA REQUIRED )
 
+FIND_PACKAGE( Acts REQUIRED COMPONENTS Core )
+
 IF(WITH_PARQUET)
   FIND_PACKAGE( Arrow  REQUIRED )
 
@@ -70,6 +72,7 @@ TARGET_LINK_LIBRARIES(TrackPerf
   ROOT::Hist
   ${ROOT_LIBRARIES} 
   DD4hep::DDCore
+  ActsCore 
   )
 TARGET_COMPILE_DEFINITIONS(TrackPerf
   PRIVATE
