--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,7 @@ gaudi_add_module(TrackPerfPlugins
         			ROOT::Hist
         			${ROOT_LIBRARIES} 
         			DD4hep::DDCore
-        			k4FWCore::k4FWCore 
-				ActsCore )
+        			k4FWCore::k4FWCore )
 
 INSTALL( TARGETS TrackPerfPlugins
 	EXPORT ${CMAKE_PROJECT_NAME}Targets
